# vcpkg_with_cmake

./: CMakeLists.txt  README.md  test_abseil_01.cpp  test_boost_01.cpp  test_folly_01.cpp  test_gtest_01.cpp
